# test_resources/pokemon/config/index.js
@@ -1,0 +1,14 @@
+const pokemons = ['ditto', 'pikachu', 'zapdos', 'geodude'];
+
+const types = [1, 3, 5, 6, 13];
+
+const moves = [
+	5, 6, 7, 9, 13, 18, 19, 21, 24, 25, 28, 29, 33, 34, 36, 38, 43, 46, 53, 63,
+	64, 144,
+];
+
+export default {
+	pokemons,
+	moves,
+	types,
+};
